--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,18 @@ services:
   redis:
     image: redis:latest
     command: redis-server
-    container_name: tago-redis
+    container_name: wekids-redis
     ports:
       - "6379:6379"
   spring:
     # ECR로부터 Spring Boot 이미지를 pull 받아 컨테이너 실행
-    image: 121284569119.dkr.ecr.ap-northeast-2.amazonaws.com/tago-dev:latest
+    image: 121284569119.dkr.ecr.ap-northeast-2.amazonaws.com/wekids-ecr:latest
     restart: always
     depends_on:
       - redis
     ports:
       - "8080:8080"
-    container_name: tago-spring
+    container_name: wekids-spring
     environment:
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
