--- a/.github/workflow/depoly.yml
+++ b/.github/workflow/depoly.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: tago-dev
+          ECR_REPOSITORY: wekids-ecr
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
