--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -2,8 +2,7 @@ name: cd-dev
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 env:
   AWS_REGION: ap-northeast-2
@@ -17,9 +16,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
