--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -53,6 +53,7 @@ jobs:
           ECR_REPOSITORY: wekids-ecr
           IMAGE_TAG: latest
         run: |
+          ls build/libs
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
