--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   spring:
     # ECR로부터 Spring Boot 이미지를 pull 받아 컨테이너 실행
-    image: 180294195931.dkr.ecr.ap-northeast-2.amazonaws.com/wekids-ecr:latest
+    image: 180294195931.dkr.ecr.ap-northeast-2.amazonaws.com/prod-wekids-ecr:latest
     restart: always
     ports:
       - "8080:8080"
