--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -6,9 +6,9 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  S3_BUCKET_NAME: wekids-depoly-s3
-  CODE_DEPLOY_APPLICATION_NAME: wekids-test
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: wekids-depoly-group
+  S3_BUCKET_NAME: prod-wekids-s3
+  CODE_DEPLOY_APPLICATION_NAME: prod-wekids-codedepoly
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: prod-wekids-depoly-group
 
 permissions:
   contents: read
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -37,7 +37,7 @@ jobs:
           echo REDIS_PORT=${{ secrets.DEV_REDIS_PORT }} >> $ENV_PATH
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -50,7 +50,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: wekids-ecr
+          ECR_REPOSITORY: prod-wekids-ecr
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
