--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: 테스트 및 빌드하기
+        run: ./gradlew clean build
+
       - name: Create .env file
         env:
           ENV_PATH: .env
@@ -68,5 +71,4 @@ jobs:
           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
           --deployment-config-name CodeDeployDefault.AllAtOnce \
           --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-          --ignore-application-stop-failures \
           --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
